Fixed overflow bug + added loading icon

--- a/app/src/App/App.css
+++ b/app/src/App/App.css
@@ -1,3 +1,17 @@
 .App {
     text-align: center;
 }
+
+.loading-spinner {
+    border: 4px solid #b175ff;
+    /* border-radius: 50%; */
+    width: 30px;
+    height: 30px;
+    animation: spin 1.5s linear infinite;
+    margin: 20px auto;
+}
+  
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
